update landing page (images, colors, buttons, static project carousel, cta); fixed navmenu to bottom of screen; added footer; update categories on guide page

--- a/Sparc.Blossom.Web/Pages/Guide.razor
+++ b/Sparc.Blossom.Web/Pages/Guide.razor
@@ -8,31 +8,32 @@
         </div>
         <div class="ask-questions">
             <input type="text" placeholder="Ask any questions here" />
-            <button class="button-ask"><img src="images/Group 343.png" /></button>
+            <button class="button-ask"><img src="images/Arrow.png" /></button>
         </div>
     </section>
     <section class="guide--categories">
         <div class="category">
             <p class="subtitle-1">begin</p>
             <div class="wrapper">
-                <h2>Explore</h2>
+                <h2>Get to know Blossom</h2>
                 <h2>Install</h2>
                 <h2>Tutorial</h2>
+                <h2> Customization</h2>
             </div>
         </div>
         <div class="category">        
             <p class="subtitle-1">enjoy</p>
             <div class="wrapper">
-                <h2>Tips & Tricks</h2>
+                <h2>Tips and Tricks</h2>
                 <h2>Tools</h2>
-                <h2>Previews</h2>
+                <h2>Features</h2>
             </div>
         </div>
         <div class="category">
             <p class="subtitle-1">errors</p>
             <div class="wrapper">
                 <h2>Troubleshooting</h2>
-                <h2>Contact Us</h2>
+                <h2>Contact us</h2>
             </div>
         </div>
     </section>
