--- a/Sparc.Blossom.Web/Pages/Index.razor
+++ b/Sparc.Blossom.Web/Pages/Index.razor
@@ -5,7 +5,7 @@
 <div class="home">
     <section class="home--hero">
         <div class="hero--image">
-            <img src="images/home-hero.png" />
+            <img src="images/Pattern_1.png" />
         </div>
         <div class="header">
             <h1>From one codebase springs many platforms.</h1>
@@ -18,9 +18,9 @@
             <p class="subtitle-1">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</p>
         </div>
         <div class="interactive-block">
-            <img src="images/Group 346.png" />
+            <img src="images/Blocks.png" />
         </div>
-        <div class="project-carousel">
+        <div class="projectlogo-carousel">
             <img src="/images/projects/Citeblue_Hori.png"/>
             <img src="/images/projects/Law of 100.png"/>
             <img src="/images/projects/Kuvio.png" />
@@ -32,7 +32,7 @@
     </section>
     <section class="home--about">
         <div class="petals">
-            <img src="/images/Petal 1.png" />
+            <img src="/images/Pattern_2.png" />
         </div>
         <div class="about--wrapper">
             <div>
@@ -75,16 +75,28 @@
             <h3>Explore our work</h3>
             <p class="subtitle-2">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet</p>
         </div>
-        <div class="carousel"></div>
+        <div class="project-carousel">
+            <div class="project-wrapper">
+                <GithubCard Name="Citeblue" />
+                <GithubCard Name="Sparc" />
+                <GithubCard Name="Conseris" />
+                <GithubCard Name="Citeblue" />
+                <GithubCard Name="Sparc" />
+                <GithubCard Name="Conseris" />
+            </div>
+            <div class="arrows">
+                <img src="/images/Fastfoward_Left.png" />
+                <img src="/images/Fastfoward_Right.png" />
+            </div>
+        </div>
     </section>
     <section class="home--cta">
         <div class="header">
-            <h3>Join Sparc Community</h3>
-            <p class="subtitle-2">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet</p>
+            <h3>Come and join us for the greatest marathon in the world</h3>
         </div>
         <div class="cta-input">
-            <input type="text" placeholder="Your Email Address" />
-            <button class="sign-up"><img src="images/Group 343.png" /></button>
+            <input type="text" placeholder="you@email.com" />
+            <button class="sign-up"><img src="images/Arrow.png" /></button>
         </div>
     </section>
 </div>
