--- a/Sparc.Blossom.Web/wwwroot/Styles/app.scss
+++ b/Sparc.Blossom.Web/wwwroot/Styles/app.scss
@@ -3,6 +3,7 @@
 @import "Global/_typography";
 @import "Global/_assets";
 @import "Global/_navmenu";
+@import "Global/footer";
 
 //Pages
 @import "Pages/Index";
