--- a/Sparc.Blossom.Web/wwwroot/Styles/Global/_navmenu.scss
+++ b/Sparc.Blossom.Web/wwwroot/Styles/Global/_navmenu.scss
@@ -4,10 +4,11 @@ nav {
     width: 100%;
     padding: 12px 50px;
     background: $background;
+    border-top: 1px solid $white;
     display: flex;
     justify-content: space-between;
     position: fixed;
-    top: 0;
+    bottom: 0;
     z-index: 100;
 
     .logo {
@@ -23,9 +24,7 @@ nav {
         .links {
             a {
                 margin-right: 50px;
-                /*font-family: 'NimbusSansExtd';*/
-                font-family: Helvetica;
-                font-weight: 400;
+                font-family: 'NimbusSansExtd';
                 color: $grey-100;
                 font-size: 16px;
                 text-decoration: none;
@@ -34,11 +33,9 @@ nav {
 
         button.join-community {
             padding: 0 25px;
-            border: solid 1px $grey-100;
+            border: solid 2px $grey-100;
             border-radius: 50px;
-            /*font-family: 'NimbusSansExtd';*/
-            font-family: Helvetica;
-            font-weight: 400;
+            font-family: 'NimbusSansExtd';
             background: transparent;
             color: $grey-100;
             font-size: 16px;
