--- a/Sparc.Blossom.Web/wwwroot/Styles/Pages/Guide.scss
+++ b/Sparc.Blossom.Web/wwwroot/Styles/Pages/Guide.scss
@@ -4,7 +4,6 @@
     width: 100%;
     padding: 0 188px;
     padding-top: 125px;
-    padding-bottom: 335px;
 
     &--hero {
         width: 1039px;
@@ -34,8 +33,8 @@
                 border: 2px solid $grey-100;
                 border-radius: 100px;
                 background: transparent;
-                color: $white;
-                font-size: 41px;
+                color: $grey-200;
+                font-size: 33px;
             }
 
             button {
