--- a/Sparc.Blossom.Web/wwwroot/Styles/Pages/Index.scss
+++ b/Sparc.Blossom.Web/wwwroot/Styles/Pages/Index.scss
@@ -3,9 +3,7 @@
 .home {
     background: $background;
     color: $grey-100;
-    /*font-family: 'NimbusSansExtd';*/
-    font-family: Helvetica;
-    font-weight: 400;
+    font-family: 'NimbusSansExtd';
 
     section {
         padding: 150px 0;
@@ -15,11 +13,11 @@
         margin: 0 auto;
 
         .hero--image {
-            width: 1166px;
-            margin: 0 auto;
+            width: 100%;
+            text-align: center;
 
             img {
-                width: 100%;
+                width: 551px;
             }
         }
 
@@ -57,11 +55,12 @@
             }
         }
 
-        .project-carousel {
+        .projectlogo-carousel {
             width: 100vw;
             margin-top: 107px;
             display: flex;
-            justify-content: space-between;
+            justify-content: center;
+            gap: 69px;
 
             img {
                 height: 55px;
@@ -70,10 +69,11 @@
     }
 
     &--about {
-        background: #111111;
+        background: $grey-200;
         display: flex;
         justify-content: center;
         gap: 90px;
+        color: $grey-900;
 
         .petals {
             img {
@@ -101,14 +101,12 @@
 
             button.learn-more {
                 padding: 8px 58px;
-                border: solid 1px $grey-100;
+                border: solid 2px $grey-900;
                 border-radius: 50px;
-                /*font-family: 'NimbusSansExtd';*/
-                font-family: Helvetica;
-                font-weight: 400;
+                font-family: 'NimbusSansExtd';
                 font-size: 26px;
                 background: transparent;
-                color: $grey-100;
+                color: $grey-900;
             }
         }
     }
@@ -116,32 +114,102 @@
     &--projects {
         margin: 0 auto;
         text-align: center;
+
+        .header {
+            margin-bottom: 60px;
+        }
+
+        .project-carousel {
+            width: 100%;
+            padding: 20px 0;
+            position: relative;
+            overflow: hidden;
+
+            .project-wrapper {
+                width: 100%;
+                display: flex;
+                justify-content: center;
+                gap: 24px;
+
+                .github-card {
+                    width: 413px;
+                    height: 336px;
+                    padding: 18px 18px 61px 18px;
+                    border: 1px solid $white;
+                    border-radius: 20px;
+
+                    img.project-photo {
+                        width: 337px;
+                        height: 257px;
+                        border-radius: 15px;
+                    }
+
+                    .github-wrapper {
+                        margin-top: 21px;
+                        display: flex;
+                        justify-content: space-between;
+
+                        p.subtitle-1 {
+                            color: $white;
+                        }
+
+                        img.github-logo {
+                            width: 29px; 
+                            height: 29px;
+                            color: $white;
+                        }
+                    }
+                }
+            }
+
+            .arrows {
+                width: 100%;
+                height: 275px;
+                display: flex;
+                justify-content: space-between;
+                position: absolute;
+                top: 50px;
+                z-index: 10;
+            }
+        }
     }
 
     &--cta {
-        width: 1039px;
-        margin: 0 auto;
-        text-align: center;
+        width: 100%;
+        margin: 0px 80px;
+        padding: 150px 80px;
+        display: flex;
+        justify-content: center;
+        gap: 20px;
+        flex-wrap: wrap;
+
+        .header {
+            max-width: 630px;
+
+            h3 {
+                font-size: 52px;
+            }
+        }
 
         .cta-input {
             margin-top: 50px;
             display: flex;
-            gap: 19px;
+            gap: 15px;
 
             input {
-                width: 900px;
-                height: 100px;
-                padding: 0 47px;
+                width: 560px;
+                height: 55px;
+                padding: 0 35px;
                 border: 2px solid $grey-100;
                 border-radius: 100px;
                 background: transparent;
-                color: $white;
-                font-size: 41px;
+                color: $grey-200;
+                font-size: 20px;
             }
 
             button.sign-up {
-                width: 100px;
-                height: 100px;
+                width: 55px;
+                height: 55px;
                 padding: 0;
                 margin: 0;
                 background: transparent;
