update navmenu links

--- a/Sparc.Blossom.Web/Shared/NavMenu.razor
+++ b/Sparc.Blossom.Web/Shared/NavMenu.razor
@@ -1,15 +1,14 @@
 ﻿<nav>
     <div class="logo">
-        <a href="/css/"><img src="/images/Blossom Color White.png" /></a>
+        <a href="/"><img src="/images/Blossom Color White.png" /></a>
     </div>
     <div class="links-wrapper">
         <div class="links">
-            <a href="/">Home</a>
             <a href="/Guide">Guide</a>
             <a href="/Contact">Contact</a>
         </div>
         <div class="join">
-            <button class="join-community">Join Community</button>
+            <button class="join-community">Join Blossom</button>
         </div>
     </div>
 </nav>
