--- a/Sparc.Blossom.Web/wwwroot/Styles/Global/_navmenu.scss
+++ b/Sparc.Blossom.Web/wwwroot/Styles/Global/_navmenu.scss
@@ -24,9 +24,10 @@ nav {
         .links {
             a {
                 margin-right: 50px;
-                font-family: 'NimbusSansExtd';
+                font-family: 'NimbusSansExtd', sans-serif;
                 color: $grey-100;
                 font-size: 16px;
+                line-height: 100%;
                 text-decoration: none;
             }
         }
@@ -35,7 +36,7 @@ nav {
             padding: 0 25px;
             border: solid 2px $grey-100;
             border-radius: 50px;
-            font-family: 'NimbusSansExtd';
+            font-family: 'NimbusSansExtd', sans-serif;
             background: transparent;
             color: $grey-100;
             font-size: 16px;
