--- a/Sparc.Blossom.Web/wwwroot/Styles/Global/_typography.scss
+++ b/Sparc.Blossom.Web/wwwroot/Styles/Global/_typography.scss
@@ -1,8 +1,14 @@
 ﻿body {
-    font-family: NimbusSansExtd;
+    font-family: 'NimbusSansExtd', sans-serif;
     font-weight: 400;
 
-    h1, h2, h3, h4, p {
+    h1, h2, h3, h4 {
+        font-family: 'NimbusSansExtd', sans-serif;
+        line-height: 115%;
+    }
+
+    p {
+        font-family: 'NimbusSans', sans-serif;
         line-height: 115%;
     }
 
@@ -41,57 +47,29 @@
 
 //fonts
 @font-face {
-    font-family: 'CircularStd';
+    font-family: 'NimbusSans';
+    font-weight: 300;
+    src: url(wwwroot/fonts/Nimbus-Sans-Light.ttf) format('opentype');
+}
+
+@font-face {
+    font-family: 'NimbusSans';
     font-weight: 400;
-    src: url(wwwroot/fonts/CircularStd-Book.ttf) format('truetype');
+    src: url(wwwroot/fonts/Nimbus-Sans-Regular.ttf) format('opentype');
 }
 
 @font-face {
-    font-family: 'CircularStd';
-    font-weight: 400;
-    font-style: italic;
-    src: url(wwwroot/fonts/CircularStd-BookItalic.ttf) format('truetype');
+    font-family: 'NimbusSans';
+    font-weight: 700;
+    src: url(wwwroot/fonts/Nimbus-Sans-Bold.ttf) format('opentype');
 }
 
 @font-face {
-    font-family: 'CircularStd';
-    font-weight: 500;
-    src: url(wwwroot/fonts/CircularStd-Medium.ttf) format('truetype');
-}
-
-@font-face {
-    font-family: 'CircularStd';
-    font-weight: 500;
-    font-style: italic;
-    src: url(wwwroot/fonts/CircularStd-MediumItalic.ttf) format('truetype');
-}
-
-@font-face {
-    font-family: 'CircularStd';
-    font-weight: 600;
-    src: url(wwwroot/fonts/CircularStd-Bold.ttf) format('truetype');
-}
-
-@font-face {
-    font-family: 'CircularStd';
-    font-weight: 600;
-    font-style: italic;
-    src: url(wwwroot/fonts/CircularStd-BoldItalic.ttf) format('truetype');
-}
-
-@font-face {
-    font-family: 'CircularStd';
+    font-family: 'NimbusSans';
     font-weight: 900;
-    src: url(wwwroot/fonts/CircularStd-Black.ttf) format('truetype');
+    src: url(wwwroot/fonts/Nimbus-Sans-Black.ttf) format('opentype');
 }
-
-@font-face {
-    font-family: 'CircularStd';
-    font-weight: 900;
-    font-style: italic;
-    src: url(wwwroot/fonts/CircularStd-BlackItalic.ttf) format('truetype');
-}
-
+ 
 @font-face {
     font-family: 'NimbusSansExtd';
     font-weight: 300;
