--- a/Sparc.Blossom.Web/wwwroot/css/app.css
+++ b/Sparc.Blossom.Web/wwwroot/css/app.css
@@ -4,7 +4,7 @@
 body {
     background: #020201;
     color: #F6F4F3;
-    font-family: 'NimbusSansExtd';
+    font-family: 'NimbusSansExtd', sans-serif;
 }
 
 body::-webkit-scrollbar {
