update landing text

--- a/Sparc.Blossom.Web/Pages/Index.razor
+++ b/Sparc.Blossom.Web/Pages/Index.razor
@@ -9,7 +9,9 @@
         </div>
         <div class="header">
             <h1>From one codebase springs many platforms.</h1>
-            <p class="subtitle-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis.</p>
+            <p class="subtitle-2">
+                Sparc offers a way to architect apps so that you can focus on painting the unique and beautiful art your app is meant to convey.
+            </p>
         </div>
     </section>
     <section class="home--intro">
@@ -55,7 +57,7 @@
                     Phasellus egestas tellus rutrum tellus pellentesque. Imperdiet massa tincidunt nunc pulvinar.
                 </p>
                 <p class="subtitle-1">
-                        Imperdiet massa tincidunt nunc pulvinar sapien et ligula. Feugiat sed lectus vestibulum mattis ullamcorper....
+                    Imperdiet massa tincidunt nunc pulvinar sapien et ligula. Feugiat sed lectus vestibulum mattis ullamcorper....
                 </p>
             </div>
             <div>
