--- a/Sparc.Blossom.Web/wwwroot/Styles/app.css
+++ b/Sparc.Blossom.Web/wwwroot/Styles/app.css
@@ -4,10 +4,12 @@
 }
 body h1, body h2, body h3, body h4 {
   font-family: "NimbusSansExtd", sans-serif;
+  font-weight: 400;
   line-height: 115%;
 }
 body p {
   font-family: "NimbusSans", sans-serif;
+  font-weight: 400;
   line-height: 115%;
 }
 body h1 {
@@ -37,13 +39,14 @@ body p.small {
 
 @font-face {
   font-family: "NimbusSans";
-  font-weight: 300;
-  src: url(wwwroot/fonts/Nimbus-Sans-Light.ttf) format("opentype");
+  font-weight: 400;
+  src: url(wwwroot/fonts/Nimbus-Sans-Regular.ttf) format("opentype");
 }
 @font-face {
   font-family: "NimbusSans";
   font-weight: 400;
-  src: url(wwwroot/fonts/Nimbus-Sans-Regular.ttf) format("opentype");
+  font-style: italic;
+  src: url(wwwroot/fonts/Nimbus-Sans-RegularItalic.ttf) format("opentype");
 }
 @font-face {
   font-family: "NimbusSans";
@@ -52,8 +55,9 @@ body p.small {
 }
 @font-face {
   font-family: "NimbusSans";
-  font-weight: 900;
-  src: url(wwwroot/fonts/Nimbus-Sans-Black.ttf) format("opentype");
+  font-weight: 700;
+  font-style: italic;
+  src: url(wwwroot/fonts/Nimbus-Sans-BoldItalic.ttf) format("opentype");
 }
 @font-face {
   font-family: "NimbusSansExtd";
