--- a/Sparc.Blossom.Server/Shared/NavMenu.razor
+++ b/Sparc.Blossom.Server/Shared/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<nav>
     <div class="logo">
-        <a href="/css/"><img src="/images/Blossom Color White.png" /></a>
+        <a href="/"><img src="/images/Blossom Color White.png" /></a>
     </div>
     <div class="links-wrapper">
         <div class="links">
