--- a/Sparc.Blossom.Web/wwwroot/Styles/Global/_navmenu.scss
+++ b/Sparc.Blossom.Web/wwwroot/Styles/Global/_navmenu.scss
@@ -32,7 +32,7 @@ nav {
             }
         }
 
-        button.join-community {
+        button.explore-blossom {
             padding: 0 25px;
             border: solid 2px $grey-100;
             border-radius: 50px;
