--- a/Sparc.Blossom.Web/wwwroot/Styles/Global/_footer.scss
+++ b/Sparc.Blossom.Web/wwwroot/Styles/Global/_footer.scss
@@ -8,6 +8,7 @@ footer {
     display: flex;
     justify-content: space-around;
     gap: 20px;
+    position: relative;
 
     .footer--column {
         p.title-2 {
