--- a/Sparc.Blossom.Web/wwwroot/Styles/Pages/Index.scss
+++ b/Sparc.Blossom.Web/wwwroot/Styles/Pages/Index.scss
@@ -14,12 +14,14 @@
         width: 100%;
         margin: 0 auto;
         position: fixed;
-        top: 0;
-        left: 0;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
         z-index: 0;
 
         .hero--image {
             width: 100%;
+            margin-bottom: 35px;
             text-align: center;
 
             img {
@@ -79,7 +81,7 @@
             width: 100vw;
             margin-top: 107px;
             display: flex;
-            justify-content: center;
+            justify-content: space-between;
             gap: 69px;
 
             img {
