Adding ibis translate

--- a/Sparc.Blossom.Server/Shared/MainLayout.razor
+++ b/Sparc.Blossom.Server/Shared/MainLayout.razor
@@ -1,9 +1,10 @@
 ﻿@inherits LayoutComponentBase
 
+<IbisTranslate ChannelId="blossom">
 <div class="page">
     <NavMenu />
-
     <main>
         @Body
     </main>
 </div>
+</IbisTranslate>
