--- a/Sparc.Blossom.Server/App.scss
+++ b/Sparc.Blossom.Server/App.scss
@@ -21,3 +21,17 @@ body {
         display: none;
     }
 }
+
+button {
+    cursor: pointer;
+}
+
+.ibis-translate {
+    padding: 0;
+    margin: 0;
+}
+
+.ibis-translating {
+    visibility: visible;
+    opacity: 0.3;
+}
