--- a/Sparc.Blossom.Server/Pages/Guide.scss
+++ b/Sparc.Blossom.Server/Pages/Guide.scss
@@ -1,19 +1,25 @@
-﻿@import "../App.variables.scss";
+﻿@import "../App.Variables.scss";
 
 .guide {
     width: 100%;
-    padding: 0 188px;
-    padding-top: 125px;
+    max-width: 1038px;
+    padding: 125px 20px;
+    margin: 0 auto;
+    color: $white;
 
     &--hero {
-        width: 1039px;
+        width: 100%;
         margin: 0 auto;
         text-align: center;
 
         .header {
-            width: 809px;
             margin: 0 auto;
             font-family: 'NimbusSansExtd', sans-serif;
+
+            p {
+                max-width: 705px;
+                margin: 0 auto;
+            }
 
             h1 {
                 margin-bottom: 10px;
@@ -28,8 +34,10 @@
             gap: 19px;
 
             input {
-                width: 900px;
+                width: 90%;
+                max-width: 900px;
                 height: 100px;
+                box-sizing: border-box;
                 padding: 0 47px;
                 border: 2px solid $grey-100;
                 border-radius: 100px;
